# gemini

./: Cargo.toml  gemini.cmb  gemini.code-workspace  player-window.cmb
res/: gemini.ui  player-window.ui
src/: about.rs  app.rs  main.rs  res.rs  window.rs
