[package]
name = "gemini"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
adw = { version = "0.5.3", package = "libadwaita", features = ["v1_4", "gtk_v4_10"] }
gtk4 = { version = "0.7.3", features = ["v4_10", "gnome_45"] }
gvdb-macros = "0.1.11"
log = "0.4.20"
simple_logger = "4.3.3"
